@@ -11,7 +11,7 @@
 #ifndef DANCE_CONFIG_HANDLER_H
 #define DANCE_CONFIG_HANDLER_H
 
-#include "dance/DAnCE_LocalityManagerS.h"
+#include "dance/DAnCE_LocalityManagerC.h"
 #include "dance/DAnCE_Utility.h"
 
 #if !defined (ACE_LACKS_PRAGMA_ONCE)
